DEV: replace filterBy, minor alignment fix (#63)

--- a/common/common.scss
+++ b/common/common.scss
@@ -89,7 +89,7 @@
 
   .d-icon {
     font-size: var(--font-up-2);
-    top: -0.15em; // alignment
+    top: -0.25em; // alignment
     margin-left: 0.33em;
     color: var(--primary-medium);
   }
